프롬프팅 가이드 수정

--- a/환승연애2_PPT_프롬프팅_가이드.ipynb
+++ b/환승연애2_PPT_프롬프팅_가이드.ipynb
@@ -2,11 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "e5bd5a9d",
       "metadata": {},
       "source": [
         "# 🎯 환승연애2 AI 데이터 분석 PPT 제작 프롬프팅 가이드\n",
         "\n",
         "## 📋 1단계: 프로젝트 초기화 프롬프트\n",
+        "\n",
+        "\n",
+        "#### 💾ppt 주소\n",
+        "https://mtegzjtn.gensparkspace.com/\n",
         "\n",
         "```\n",
         "환승연애2 AI 데이터 분석 프레젠테이션을 만들어줘.\n",
